入玉宣言用のAPIを設置した
